<resources>
    <string name="app_name">共享停车位</string>
    <string name="api_ip_port">http://192.168.1.147:3000</string>

    <string name="username">用 户 名</string>
    <string name="nickname">昵    称</string>
    <string name="password">密   码</string>
    <string name="password_confirm">确 认 密 码</string>
    <string name="phone">手 机 号</string>
    <string name="credit">信 用 值</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登   录</string>
    <string name="logout">退出登录</string>
    <string name="register">注   册</string>
    <string name="loading">正在加载数据</string>

    <string name="menu_sharing">共享停车位</string>
    <string name="menu_index">主   页</string>
    <string name="menu_user">个人中心</string>
    <string name="menu_register">注册用户</string>
    <string name="menu_login">用户登录</string>
    <string name="menu_add_sharing">共享我的停车位</string>
    <string name="menu_auth1">车主身份认证</string>
    <string name="menu_auth2">业主身份认证</string>

    <string name="my_account">我的账号</string>
    <string name="my_sharing">我的共享记录</string>
    <string name="my_parking">我的停车记录</string>
    <string name="my_parkingspace">停车位信息</string>
    <string name="my_car">车辆信息</string>

    <string name="info_position">地址信息:</string>
    <string name="info_begin_time">开始时间:</string>
    <string name="info_end_time">结束时间:</string>
    <string name="info_share_id">共享编号:</string>
    <string name="info_state">当前状态:</string>
    <string name="info_cost">所需花费:</string>
    <string name="info_borrower_id">共享人编号:</string>
    <string name="info_borrower_name">共享人姓名:</string>
    <string name="info_borrower_credit">共享人信用:</string>
    <string name="info_borrower_phone">共享人电话:</string>
    <string name="info_more">更多信息:</string>

    <string name="btn_use">使用</string>
    <string name="btn_cancel">关闭</string>
    <string name="btn_add">添加</string>

    <string name="hint_more">如具体车位编号&#8230;</string>
    <string name="hint_position">输入地址</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_share_info">车位详情</string>
</resources>
