<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ShareInfoActivity"
    tools:showIn="@layout/activity_share_info">

    <TextView
        android:id="@+id/tv_share_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/info_share_id"/>
    <TextView
        android:id="@+id/tv_position"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_share_id"
        android:text="@string/info_position" />
    <TextView
        android:id="@+id/tv_begin_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_position"
        android:text="@string/info_begin_time" />
    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_begin_time"
        android:text="@string/info_end_time" />
    <TextView
        android:id="@+id/tv_borrower_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_end_time"
        android:text="@string/info_borrower_id" />
    <TextView
        android:id="@+id/tv_borrower_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_borrower_id"
        android:text="@string/info_borrower_name" />
    <TextView
        android:id="@+id/tv_borrower_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_borrower_name"
        android:text="@string/info_borrower_phone" />
    <TextView
        android:id="@+id/tv_borrower_credit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_borrower_phone"
        android:text="@string/info_borrower_credit" />
    <TextView
        android:id="@+id/tv_more"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_borrower_credit"
        android:text="@string/info_more" />
    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_more"
        android:text="@string/info_state" />
    <TextView
        android:id="@+id/tv_cost"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/tv_state"
        android:text="@string/info_cost" />
</android.support.constraint.ConstraintLayout>