<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/tv_position"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:padding="@dimen/dp_5"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:text="@string/info_position" />

    <TextView
        android:id="@+id/tv_begin_time"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:padding="@dimen/dp_5"
        android:layout_centerVertical="true"
        android:layout_below="@id/tv_position"
        android:text="@string/info_begin_time" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:padding="@dimen/dp_5"
        android:layout_centerVertical="true"
        android:layout_below="@id/tv_begin_time"
        android:text="@string/info_end_time" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@+id/tv_end_time"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/dp_40"
        android:text="@string/btn_cancel" />

    <Button
        android:id="@+id/btn_use"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/tv_end_time"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_toEndOf="@id/btn_cancel"
        android:text="@string/btn_use" />
</RelativeLayout>